fixed css so images won't stretch

--- a/src/app/components/products/products/products.component.css
+++ b/src/app/components/products/products/products.component.css
@@ -12,7 +12,7 @@
 }
 
 img {
-    width: 100%;
+    width: inherit;
     height: 200px;
 }
 
@@ -22,8 +22,8 @@ img {
 }
 
 #logo {
-    justify-content: center;
     margin-bottom: 1rem;
+    text-align: center;
 }
 
 mat-card {
